--- a/index.org
+++ b/index.org
@@ -17,6 +17,10 @@
 [[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1_race_control_message.csv][FP1:Race Control Message CSV]]
 [[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-2.pdf][FP2 PDF]]
 [[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-2_race_control_message.csv][FP2:Race Control Message CSV]]
+[[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-3.pdf][FP3 PDF]]
+[[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-3_race_control_message.csv][FP3:Race Control Message CSV]]
+[[./2022/2022_Rd20_Mexico-City-Grand-Prix_Qualifying.pdf][QF PDF]]
+[[./2022/2022_Rd20_Mexico-City-Grand-Prix_Qualifying_race_control_message.csv][QF:Race Control Message CSV]]
 
 ** Rd19 United States Grand Prix
 
