--- a/index.org
+++ b/index.org
@@ -21,6 +21,9 @@
 [[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint.pdf][SPRINT PDF]]
 [[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_gap-to-leader.csv][SPRINT:GapToLeader CSV]]
 [[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_race_control_message.csv][SPRINT:Race Control Message CSV]]
+[[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race.pdf][RACE PDF]]
+[[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race_gap-to-leader.csv][RACE:GapToLeader CSV]]
+[[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race_race_control_message.csv][RACE:Race Control Message CSV]]
 ** Rd20 Mexico City Grand Prix
 [[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1.pdf][FP1 PDF]]
 [[./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1_race_control_message.csv][FP1:Race Control Message CSV]]
