--- a/index.org
+++ b/index.org
@@ -20,6 +20,9 @@
 [[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Practice-3_race_control_message.csv][FP3:Race Control Message CSV]]
 [[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Qualifying.pdf][QF PDF]]
 [[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Qualifying_race_control_message.csv][QF:Race Control Message CSV]]
+[[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race.pdf][RACE PDF]]
+[[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race_gap-to-leader.csv][RACE:GapToLeader CSV]]
+[[./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race_race_control_message.csv][RACE:Race Control Message CSV]]
 
 ** Rd21 Sao Paulo Grand Prix
 [[./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Practice-1.pdf][FP1 PDF]]
