2023 Pre-Season Test Day2のデータを追加

--- a/index.org
+++ b/index.org
@@ -15,7 +15,9 @@
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf][Day1 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_laptime.csv][Day1 All Laptime CSV]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_race_control_message.csv][Day1 Race Control Message CSV]]
-
+[[./2023/2023_Rd00_Pre-Season-Testing_Practice-2.pdf][Day2 PDF]]
+[[./2023/2023_Rd00_Pre-Season-Testing_Practice-2_laptime.csv][Day2 All Laptime CSV]]
+[[./2023/2023_Rd00_Pre-Season-Testing_Practice-2_race_control_message.csv][Day2 Race Control Message CSV]]
 * 2022 season
 
 ** Rd22 Abu Dhabi Grand Prix
