2023 Pre-Season Test Day1/Day2 テレメトリ比較のデータを追加

--- a/index.org
+++ b/index.org
@@ -15,9 +15,17 @@
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf][Day1 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_laptime.csv][Day1 All Laptime CSV]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_race_control_message.csv][Day1 Race Control Message CSV]]
+
+[[./2023/2023_Rd00_Pre-season-test-Day1-VER_vs_SAI_vs_ALO_vs_HAM.pdf][Day1:VER_vs_SAI_vs_ALO_vs_HAM PDF]]
+[[./2023/2023_Rd00_Pre-season-test-Day1-NOR_vs_ALB_vs_ZHO.pdf][Day1:NOR_vs_ALB_vs_ZHO PDF]]
+
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-2.pdf][Day2 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-2_laptime.csv][Day2 All Laptime CSV]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-2_race_control_message.csv][Day2 Race Control Message CSV]]
+
+[[./2023/2023_Rd00_Pre-season-test-Day2-VER_vs_SAI_vs_RUS_vs_ZHO.pdf][Day2:VER_vs_SAI_vs_RUS_vs_ZHO PDF]]
+[[./2023/2023_Rd00_Pre-season-test-Day2-ALO_vs_DEV_vs_HUL.pdf][Day2:ALO_vs_DEV_vs_HUL PDF]]
+
 * 2022 season
 
 ** Rd22 Abu Dhabi Grand Prix
