--- a/index.org
+++ b/index.org
@@ -18,6 +18,7 @@
 
 [[./2023/2023_Rd00_Pre-season-test-Day1-VER_vs_SAI_vs_ALO_vs_HAM.pdf][Day1:VER_vs_SAI_vs_ALO_vs_HAM PDF]]
 [[./2023/2023_Rd00_Pre-season-test-Day1-NOR_vs_ALB_vs_ZHO.pdf][Day1:NOR_vs_ALB_vs_ZHO PDF]]
+[[./2023/2023_Rd00_Pre-season-test-Day1-VER_SAI_HAM_delta.pdf][Day1:VER_SAI_HAM w/ delta]]
 
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-2.pdf][Day2 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-2_laptime.csv][Day2 All Laptime CSV]]
@@ -25,6 +26,7 @@
 
 [[./2023/2023_Rd00_Pre-season-test-Day2-VER_vs_SAI_vs_RUS_vs_ZHO.pdf][Day2:VER_vs_SAI_vs_RUS_vs_ZHO PDF]]
 [[./2023/2023_Rd00_Pre-season-test-Day2-ALO_vs_DEV_vs_HUL.pdf][Day2:ALO_vs_DEV_vs_HUL PDF]]
+[[./2023/2023_Rd00_Pre-season-test-Day2-VER_SAI_RUS_delta.pdf][Day2:VER_SAI_RUS w/ delta]]
 
 * 2022 season
 
