Add 2023 Rd01 FP3 Data

--- a/index.org
+++ b/index.org
@@ -22,6 +22,10 @@
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-2_race_control_message.csv][FP2:Race Control Message CSV]]
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-2_laptime.csv][FP2:All Laptime CSV]]
 
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3.pdf][FP3:Plots PDF]]
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3_race_control_message.csv][FP3:Race Control Message CSV]]
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3_laptime.csv][FP3:All Laptime CSV]]
+
 ** Pre-Season Test Week1
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf][Day1 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_laptime.csv][Day1 All Laptime CSV]]
