Add 2023 Rd01 R Data

--- a/index.org
+++ b/index.org
@@ -29,6 +29,10 @@
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Qualifying.pdf][QF:Plots PDF]]
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Qualifying_race_control_message.csv][QF:Race Control Message CSV]]
 
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Race.pdf][R:Plots PDF]]
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gap-to-leader.csv][R:Gap to Leader CSV ]]
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Race_race_control_message.csv][R:Race Control Message CSV]]
+
 ** Pre-Season Test Week1
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf][Day1 PDF]]
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1_laptime.csv][Day1 All Laptime CSV]]
