--- a/index.org
+++ b/index.org
@@ -32,6 +32,7 @@
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Race.pdf][R:Plots PDF]]
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gap-to-leader.csv][R:Gap to Leader CSV ]]
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Race_race_control_message.csv][R:Race Control Message CSV]]
+[[./2023/2023_Rd01_Bahrain-Grand-Prix_Race_laptime.csv][R:All Laptime CSV]]
 
 ** Pre-Season Test Week1
 [[./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf][Day1 PDF]]
