--- a/index.org
+++ b/index.org
@@ -11,6 +11,10 @@
 
 * 2023 season
 
+** Rd02 Saudi Arabian Grand Prix
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf][FP1:Plots PDF]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1_race_control_message.csv][FP1:Race Control Message CSV]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1_laptime.csv][FP1:All Laptime CSV]]
 
 ** Rd01 Bahrain Grand Prix
 
