--- a/index.org
+++ b/index.org
@@ -24,6 +24,9 @@
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-3_race_control_message.csv][FP3:Race Control Message CSV]]
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-3_laptime.csv][FP3:All Laptime CSV]]
 
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Qualifying_race_control_message.csv][QF:Race Control Message CSV]]
+
 ** Rd01 Bahrain Grand Prix
 
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf][FP1:Plots PDF]]
