--- a/index.org
+++ b/index.org
@@ -27,6 +27,11 @@
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Qualifying.pdf][QF:Plots PDF]]
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Qualifying_race_control_message.csv][QF:Race Control Message CSV]]
 
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race.pdf][R:Plots PDF]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv][R: Race Control Message CSV]]
+
 ** Rd01 Bahrain Grand Prix
 
 [[./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf][FP1:Plots PDF]]
