--- a/index.org
+++ b/index.org
@@ -21,6 +21,9 @@
 [[./2023/2023_Rd03_Australian-Grand-Prix_Practice-2_race_control_message.csv][FP2:Race Control Message CSV]]
 [[./2023/2023_Rd03_Australian-Grand-Prix_Practice-2_laptime.csv][FP2:All Laptime CSV]]
 
+[[./2023/2023_Rd03_Australian-Grand-Prix_Practice-3.pdf][FP3:Plots PDF]]
+[[./2023/2023_Rd03_Australian-Grand-Prix_Practice-3_race_control_message.csv][FP3:Race Control Message CSV]]
+[[./2023/2023_Rd03_Australian-Grand-Prix_Practice-3_laptime.csv][FP3:All Laptime CSV]]
 ** Rd02 Saudi Arabian Grand Prix
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1_race_control_message.csv][FP1:Race Control Message CSV]]
