--- a/index.org
+++ b/index.org
@@ -28,6 +28,11 @@
 [[./2023/2023-Rd05-Miami-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd05-Miami-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd05-Miami-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2023/2023-Rd05-Miami-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023-Rd05-Miami-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023-Rd05-Miami-Grand-Prix-Race_rcm.csv][R: Race Control Message CSV]]
+
 ** Rd04 Azerbaijan Grand Prix
 [[./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
@@ -46,7 +51,6 @@
 [[./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
 [[./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
 [[./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv][R: Race Control Message CSV]]
-
 
 ** Rd03 Australian Grand Prix
 [[./2023/2023_Rd03_Australian-Grand-Prix_Practice-1.pdf][FP1:Plots PDF]]
