--- a/index.org
+++ b/index.org
@@ -11,7 +11,12 @@
 
 * 2023 season
 
-** Rd07 Monaco Grand Prix
+** Rd07 Spanish Grand Prix
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
+
+** Rd06 Monaco Grand Prix
 [[./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 [[./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
