--- a/index.org
+++ b/index.org
@@ -24,6 +24,10 @@
 [[./2023/2023-Rd07-Spanish-Grand-Prix-Practice-3_rcm.csv][FP3:Race Control Message CSV]]
 [[./2023/2023-Rd07-Spanish-Grand-Prix-Practice-3_laptime.csv][FP3:All Laptime CSV]]
 
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd07-Spanish-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd06 Monaco Grand Prix
 [[./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
