Add 2023 Rd09 Canadian GP SS

--- a/index.org
+++ b/index.org
@@ -19,6 +19,11 @@
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout.pdf][SS:Plots PDF]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
+
 ** Rd08 Canadian Grand Prix
 [[./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 
