--- a/index.org
+++ b/index.org
@@ -24,6 +24,11 @@
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
 
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_rcm.csv][S: Race Control Message CSV]]
+
 ** Rd08 Canadian Grand Prix
 [[./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 
