--- a/index.org
+++ b/index.org
@@ -29,6 +29,11 @@
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
 [[./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_rcm.csv][S: Race Control Message CSV]]
 
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv][R: Race Control Message CSV]]
+
 ** Rd08 Canadian Grand Prix
 [[./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 
