--- a/index.org
+++ b/index.org
@@ -18,6 +18,10 @@
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
 
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd11 Hungarian Grand Prix
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
