--- a/index.org
+++ b/index.org
@@ -22,6 +22,10 @@
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout.pdf][SS:Plots PDF]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
+
 ** Rd11 Hungarian Grand Prix
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
