--- a/index.org
+++ b/index.org
@@ -26,6 +26,11 @@
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
 
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2023/2023-Rd12-Belgian-Grand-Prix-Sprint_rcm.csv][S: Race Control Message CSV]]
+
 ** Rd11 Hungarian Grand Prix
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
 [[./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
