--- a/index.org
+++ b/index.org
@@ -25,6 +25,10 @@
 [[./2023/2023-Rd13-Dutch-Grand-Prix-Practice-3_rcm.csv][FP3:Race Control Message CSV]]
 [[./2023/2023-Rd13-Dutch-Grand-Prix-Practice-3_laptime.csv][FP3:All Laptime CSV]]
 
+[[./2023/2023-Rd13-Dutch-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd13-Dutch-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd13-Dutch-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd12 Belgian Grand Prix
 
 [[./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
