--- a/index.org
+++ b/index.org
@@ -18,6 +18,9 @@
 [[./2023/2023-Rd14-Italian-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
 [[./2023/2023-Rd14-Italian-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
 
+[[./2023/2023-Rd14-Italian-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
+[[./2023/2023-Rd14-Italian-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
+[[./2023/2023-Rd14-Italian-Grand-Prix-Practice-2_laptime.csv][FP2:All Laptime CSV]]
 ** Rd13 Dutch Grand Prix
 [[./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
