--- a/index.org
+++ b/index.org
@@ -11,6 +11,11 @@
 
 * 2023 season
 
+** Rd15 Singapore Grand Prix
+
+[[./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
+[[./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
+[[./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
 
 ** Rd14 Italian Grand Prix
 
