--- a/index.org
+++ b/index.org
@@ -29,6 +29,11 @@
 [[./2023/2023-Rd16-Japanese-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd16-Japanese-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd16-Japanese-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2023/2023-Rd16-Japanese-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023-Rd16-Japanese-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023-Rd16-Japanese-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd15 Singapore Grand Prix
 
 [[./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
