--- a/index.org
+++ b/index.org
@@ -22,6 +22,17 @@
 [[./2023/2023-Rd18-United-States-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd18-United-States-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout.pdf][SS:Plots PDF]]
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
+
+[[./2023/2023-Rd18-United-States-Grand-Prix_Telemetry_overlay.pdf][Telemetry Overlay]]
+
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2023/2023-Rd18-United-States-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+
 ** Rd17 Qatar Grand Prix
 [[./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
