--- a/index.org
+++ b/index.org
@@ -22,6 +22,15 @@
 [[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
 [[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-2_laptime.csv][FP2:All Laptime CSV]]
 
+
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3.pdf][FP3:Plots PDF]]
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3_rcm.csv][FP3:Race Control Message CSV]]
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3_laptime.csv][FP3:All Laptime CSV]]
+
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd18 United States Grand Prix
 
 [[./2023/2023-Rd18-United-States-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
