--- a/index.org
+++ b/index.org
@@ -20,6 +20,11 @@
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
+[[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout.pdf][SS:Plots PDF]]
+[[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout_rcm.csv][SS:Race Control Message CSV]]
+[[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout_laptime.csv][SS:All Laptime CSV]]
+
 ** Rd19 Mexico City Grand Prix
 
 [[./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
