--- a/index.org
+++ b/index.org
@@ -18,6 +18,10 @@
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2_laptime.csv][FP2:All Laptime CSV]]
 
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd20 Sao Paulo Grand Prix
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
