--- a/index.org
+++ b/index.org
@@ -22,6 +22,11 @@
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd20 Sao Paulo Grand Prix
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
 [[./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
