--- a/index.org
+++ b/index.org
@@ -12,6 +12,12 @@
 * 2023 season
 
 
+** Rd22 Abu Dhabi Grand Prix
+
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-1.pdf][FP1:Plots PDF]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-1_rcm.csv][FP1:Race Control Message CSV]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-1_laptime.csv][FP1:All Laptime CSV]]
+
 ** Rd21 Las Vegas Grand Prix
 
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
