--- a/index.org
+++ b/index.org
@@ -22,6 +22,10 @@
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2_rcm.csv][FP2:Race Control Message CSV]]
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2_laptime.csv][FP2:All Laptime CSV]]
 
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3.pdf][FP3:Plots PDF]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_rcm.csv][FP3:Race Control Message CSV]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_laptime.csv][FP3:All Laptime CSV]]
+
 ** Rd21 Las Vegas Grand Prix
 
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
