--- a/index.org
+++ b/index.org
@@ -26,6 +26,10 @@
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_rcm.csv][FP3:Race Control Message CSV]]
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_laptime.csv][FP3:All Laptime CSV]]
 
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Qualifying.pdf][QF:Plots PDF]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
+
 ** Rd21 Las Vegas Grand Prix
 
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
