--- a/index.org
+++ b/index.org
@@ -30,6 +30,11 @@
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Qualifying_rcm.csv][QF:Race Control Message CSV]]
 [[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Qualifying_laptime.csv][QF:All Laptime CSV]]
 
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+
 ** Rd21 Las Vegas Grand Prix
 
 [[./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf][FP2:Plots PDF]]
