--- a/index.org
+++ b/index.org
@@ -15,6 +15,10 @@
 [[./2024/2024-Pre-Season-Testing-1-1.pdf][Day1: Plot PDF]]
 [[./2024/2024-Pre-Season-Testing-1-1_laptime.csv][Day1: laptime csv]]
 [[./2024/2024-Pre-Season-Testing-1-1_rcm.csv][Day1: race control message csv]]
+
+[[./2024/2024-Pre-Season-Testing-1-2.pdf][Day2: Plot PDF]]
+[[./2024/2024-Pre-Season-Testing-1-2_laptime.csv][Day2: laptime csv]]
+[[./2024/2024-Pre-Season-Testing-1-2_rcm.csv][Day2: race control message csv]]
 * 2023 season
 
 
