--- a/index.org
+++ b/index.org
@@ -21,6 +21,10 @@
 [[./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Pre-season test
 [[./2024/2024-Pre-Season-Testing-1-1.pdf][Day1: Plot PDF]]
 [[./2024/2024-Pre-Season-Testing-1-1_laptime.csv][Day1: laptime csv]]
