--- a/index.org
+++ b/index.org
@@ -27,7 +27,12 @@
 
 [[./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying.pdf][QF: Plot PDF]]
 [[./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_laptime.csv][QF: laptime csv]]
-[[./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_rcm.csv][FP3: race QFtrol message csv]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_rcm.csv][QF: race control message csv]]
+
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
 
 ** Pre-season test
 [[./2024/2024-Pre-Season-Testing-1-1.pdf][Day1: Plot PDF]]
